# Redish

./: .gitignore  README.md  compile_win.bat
Client/: CMakeLists.txt  Client.cpp  Client.h  ClientLog.h  ClientMain.cpp
Client/include/: Client.h
Client/src/: Client.cpp  ClientLog.cpp  ClientMain.cpp
Server/: CMakeLists.txt  Server.cpp  Server.h  ServerLog.cpp  ServerLog.h  ServerMain.cpp  Utils.cpp  Utils.h
Server/include/: Server.h
Server/src/: Server.cpp  ServerMain.cpp
